# car

./: .envrc  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  flake.nix  package.json
car-client/: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
car-client/src/: App.tsx  context.tsx  index.css  main.tsx
car-client/src-tauri/: Cargo.toml  tauri.conf.json
car-client/src-tauri/icons/: icon.icns
car-client/src-tauri/src/: command.rs  lib.rs  main.rs
car-client/src/component/: NavigateCard.tsx  THCard.tsx
car-client/src/pages/: DashBoard.tsx  Login.tsx
car-server/: Cargo.toml
car-server/src/: config.rs  connection.rs  context.rs  driver.rs  main.rs  trace.rs
car-server/src/driver/: montor.rs  nixie.rs  rgb_led.rs  servos.rs  th.rs  ultrasonic.rs
car-utils/: Cargo.toml  index.d.ts
car-utils/src/: buffer.rs  command.rs  lib.rs
