[package]
name = "car-server"
version = "0.1.0"
edition = "2021"

[dependencies]
car-utils = { path = "../car-utils" }

arrayvec = "0.7.6"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.208", features = ["default", "derive"] }
serde_json = "1.0.125"
time = { version = "0.3.36", features = ["default", "local-offset"] }
config = { version = "0.14.0", default-features = false, features = ["json"] }
log = "0.4.22"
env_logger = {version = "0.11.5"}

rppal = { version = "0.19.0", features = ["embedded-hal-0", "embedded-hal"] , optional = true}
hc-sr04 = {version ="0.1.2", optional = true}
tm1637-embedded-hal = { version = "0.1.0", default-features = false, features = ["blocking", "mappings"] , optional = true }
gihex-hc-sr04 = {version = "0.1.5", optional = true}
embedded-hal = {version = "1.0.0", optional = true}
opencv = { version = "0.92.2", optional = true }

[features]
default = []

rasp = []
